# esp_sample_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bsp/board/: CMakeLists.txt
bsp/borad/: pinmap.h
bsp/project/: CMakeLists.txt  sdkconfig
bsp/project/components/freertos/: app_startup.c
bsp/project/components/partition_table/: project_include.cmake
bsp/project/main/: CMakeLists.txt  main.c
